# ReplayOverlay

./: .gitignore  Directory.Build.props  OBSReplay.slnx  README.md  ReplayOverlay.slnx  build.ps1  installer.iss  test_pipe.ps1
src/OBSReplay.Host/: App.xaml  App.xaml.cs  NativeMethods.cs  OBSReplay.Host.csproj  Program.cs  app.manifest
src/OBSReplay.Host/Models/: AppConfig.cs  AudioAdvancedInfo.cs  AudioSource.cs  Constants.cs  FilterInfo.cs  IpcMessage.cs  ObsState.cs  ObsStatsData.cs  SceneItem.cs
src/OBSReplay.Host/Services/: AdminService.cs  AudioMathService.cs  ConfigService.cs  GameDetectionService.cs  HotkeyService.cs  IpcServerService.cs  ObsHotkeySyncService.cs  ObsWebSocketService.cs  OverlayProcessService.cs  ReplayFileService.cs  TrayIconService.cs
src/OBSReplay.Host/Views/: SettingsWindow.xaml  SettingsWindow.xaml.cs  SetupWizardWindow.xaml  SetupWizardWindow.xaml.cs
src/OBSReplay.Overlay/: CMakeLists.txt  DxRenderer.cpp  DxRenderer.h  IpcClient.cpp  OverlayApp.cpp  OverlayApp.h  OverlayAssets.h  OverlayDataModel.cpp  OverlayDataModel.h  OverlayState.h  PreviewRenderer.cpp  PreviewRenderer.h  RmlRenderInterface_DX11.cpp  RmlRenderInterface_DX11.h  RmlSystemInterface_Win32.cpp  Theme.h  WindowManager.cpp  main.cpp
src/ReplayOverlay.Host/: App.xaml  App.xaml.cs  NativeMethods.cs  Program.cs  ReplayOverlay.Host.csproj
src/ReplayOverlay.Host/Models/: AppConfig.cs  AppState.cs  AudioAdvancedInfo.cs  AudioSource.cs  Constants.cs  FilterInfo.cs  IpcMessage.cs  SceneItem.cs  StatsData.cs
src/ReplayOverlay.Host/Services/: AdminService.cs  AudioMathService.cs  ConfigService.cs  GameDetectionService.cs  HotkeyService.cs  HotkeySyncService.cs  IpcServerService.cs  OverlayProcessService.cs  ReplayFileService.cs  TrayIconService.cs  WebSocketService.cs
src/ReplayOverlay.Host/Views/: SettingsWindow.xaml  SettingsWindow.xaml.cs  SetupWizardWindow.xaml  SetupWizardWindow.xaml.cs
src/ReplayOverlay.Overlay/: CMakeLists.txt  DxRenderer.cpp  IpcClient.h  OverlayApp.cpp  OverlayAssets.h  RmlRenderInterface_DX11.cpp  RmlRenderInterface_DX11.h  RmlSystemInterface_Win32.cpp  RmlSystemInterface_Win32.h  WindowManager.h  main.cpp
tests/OBSReplay.Host.Tests/: OBSReplay.Host.Tests.csproj
tests/OBSReplay.Host.Tests/Models/: AppConfigTests.cs  IpcMessageTests.cs
tests/OBSReplay.Host.Tests/Services/: AudioMathServiceTests.cs  ConfigServiceTests.cs  GameDetectionServiceTests.cs  HotkeyServiceTests.cs  ObsHotkeySyncServiceTests.cs  ReplayFileServiceTests.cs
tests/OBSReplay.Overlay.Tests/: CMakeLists.txt  OverlayStateTests.cpp
tests/ReplayOverlay.Host.Tests/: ReplayOverlay.Host.Tests.csproj
tests/ReplayOverlay.Host.Tests/Models/: AppConfigTests.cs  IpcMessageTests.cs
tests/ReplayOverlay.Host.Tests/Services/: AudioMathServiceTests.cs  ConfigServiceTests.cs  GameDetectionServiceTests.cs  HotkeyServiceTests.cs  HotkeySyncServiceTests.cs  ReplayFileServiceTests.cs
tests/ReplayOverlay.Overlay.Tests/: CMakeLists.txt  IpcClientTests.cpp  ThemeTests.cpp
